<resources>
    <string name="app_name">Korona-Zakupy</string>
    <string name="title_activity_register_part1">Registration</string>
    <string name="logo">Logo</string>
    <!-- Shared Preference -->
    <string name="global_login">Login</string>
    <string name="global_register">Register</string>
    <string name="global_cancel">CANCEL</string>
    <string name="global_accept">ACCEPT</string>
    <string name="user_id_key"></string>
    <string name="user_token_key"></string>
    <string name="user_role_key"></string>
    <string name="new_order_type" translatable="false"></string>
    <string name="order_type_dog">Dog</string>
    <string name="order_type_grocery">Grocery</string>
    <string name="order_type_grocery18">Grocery 18+</string>
    <string name="order_type_pharmacy">Pharmacy</string>
    <!--    -->
    <string name="chose_order_type_selected_dog">Walking a dog</string>
    <string name="chose_order_type_selected_grocery">Grocery shopping</string>
    <string name="chose_order_type_selected_grocery_18">Grocery shopping (18+ articles)</string>
    <string name="chose_order_type_selected_pharmacy">Pharmacy</string>
    <string name="chose_order_type_selected_nothing">Please select order type</string>
    <string name="dog_describe_title">Few words about your doggie</string>
    <string name="dog_describe_hint">Type additional information</string>
    <!-- -->
    <string name="toast_add_order_validation">Please add at least one product</string>
    <string name="toast_add_order_error">"Server error, please wait a couple minutes and try again"</string>
    <string name="dialog_positive_button_text">ADD</string>
    <string name="dialog_negative_button_text">CANCEL</string>
    <string name="text_view_add_new_product"><u>Add product</u></string>
    <string name="dialog_hint_add_product">Type product name</string>
    <string name="global_menu_logout">Log out</string>
    <string-array name="dialog_number_picker_values">
        <item>0</item>
        <item>0.25</item>
        <item>0.5</item>
        <item>0.75</item>
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
    </string-array>
    <string-array name="dialog_number_picker_unit">
        <item>pieces</item>
        <item>shrinkwrap</item>
        <item>packages</item>
        <item>cartons</item>
        <item>bottles</item>
        <item>cans</item>
        <item>g</item>
        <item>dag</item>
        <item>kg</item>
        <item>l</item>
    </string-array>
    <string name="choose_order_type_text">Choose  order type:</string>
    <string name="choose_order_type_cancel">Cancel</string>
    <string name="choose_order_type_accept">Accept</string>
    <!-- RegistrationActivity -->
    <string name="reg_hint_username">User Name</string>
    <string name="reg_hint_password">Password</string>
    <string name="reg_hint_confirmPassword">Confirm Password</string>
    <string name="reg_hint_email">Email</string>
    <string name="reg_hint_first_name">First Name</string>
    <string name="reg_hint_last_name">Last Name</string>
    <string name="reg_hint_address">Address</string>
    <string name="reg_btn_text_add_photo">Add Photo</string>
    <string name="reg_error_password_match">Passwords not match</string>
    <string name="reg_error_password_regex">Password must have at least 8 characters and contain at least one digit, a lower and upper case letter and special character</string>
    <string name="reg_error_is_already_taken">User name is already taken</string>
    <string name="reg_text_view_ask_have_account">Already have an account?</string>
    <string name="reg_text_view_to_login"><u>SIGN IN!</u></string>
    <string name="reg_choose_vol">Volunteer</string>
    <string name="reg_choose_person">Person in Quarantine</string>
    <string name="global_person_in_quarantine_role" translatable="false">PersonInQuarantine</string>
    <string name="global_volunteer_role" translatable="false">Volunteer</string>
    <!--LoginActivity-->
    <string name="log_text_view_to_ask_have_account">Don\'t have an account?</string>
    <string name="log_text_view_to_register"><u>REGISTER NOW!</u></string>
    <string name="log_error_invalid_email_or_password">Email or password invalid</string>
    <!--VolunteerAcitivy-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_volunteer">VolunteerActivity</string>
    <string name="title_available">Available</string>
    <string name="title_active">Active</string>
    <string name="title_history">History</string>
    <string name="accept_order">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="popup_text">Order details</string>
    <string name="global_empty_field_error">Field must not be empty</string>
    <!--    <string name="active_orders_list_name">History</string>-->
    <string name="Ok">OK</string>
    <string name="Address">Address:</string>
    <string name="Date">Placing date:</string>
    <string name="confirm">Finish order</string>
    <string name="cancel_order">Cancel order</string>
    <string name="order_details">Order details</string>
    <!-- Strings used for fragments for navigation -->

    <string name="title_activity_login">Login</string>
    <string name="title_activity_person_in_quarantine">PersonInQuarantineActivity</string>
    <string name="my_orders">My orders</string>
    <string name="second_fragment_label">lol</string>
    <string name="first_fragment_label">lol</string>
    <string name="status_available">Available</string>
    <string name="status_in_progress">In Progress</string>
    <string name="status_awaiting_confirmation">Awaiting confirmation</string>
    <string name="status_finished">Finished</string>
    <string name="invalid_status">Status jest inwalidą</string>
    <string name="accepted_by">Accepted by:</string>
    <string name="status_in_progress_quaranteen">Order taken</string>
    <string name="status_available_quaranteen">Waiting for acceptance</string>
    <string name="order_from">Order from:</string>
    <string name="send_review">Send review</string>
    <string name="review_of_person_in_quarantine_title">Rate the orderer:</string>
    <string name="review_of_volunteer_title">Rate the volunteer: </string>
    <string name="please_review">Please rate the orderer first</string>
    <string name="nothing_here_active_quarantine">Nothing\'s here, feel free to add an order</string>
    <string name="nothing_here_history">Your finished orders will be listed here</string>
    <string name="nothing_here_active_volunteer">You haven\'t accepted any order</string>
    <string name="nothing_here_available_volunteer">There are no available orders</string>


</resources>
