<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_available">

    <fragment
        android:id="@+id/navigation_available"
        android:name="com.maskjs.korona_zakupy.volunteer_ui.available.AvailableOrdersFragment"
        android:label="@string/title_available"
        tools:layout="@layout/fragment_available_orders" />

    <fragment
        android:id="@+id/navigation_active"
        android:name="com.maskjs.korona_zakupy.volunteer_ui.active.ActiveOrdersFragment"
        android:label="@string/title_active"
        tools:layout="@layout/fragment_active_orders" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.maskjs.korona_zakupy.volunteer_ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
</navigation>
