<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="chooseOrderTypeViewModel"
            type="com.maskjs.korona_zakupy.ui.person_in_quarantine.active.choose_order_type.ChooseOrderTypeViewModel" />
    </data>
    <LinearLayout
        android:id="@+id/choose_order_type_linear_layout_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/choose_order_type_linear_layout_images"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/choose_dog"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/order_type_dog"
                android:scaleType="centerCrop"
                android:src="@drawable/dog_avatar" />

            <ImageButton
                android:id="@+id/choose_grocery"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/order_type_grocery"
                android:scaleType="centerInside"
                android:src="@drawable/groceries_avatar" />

            <ImageButton
                android:id="@+id/choose_grocery_plus"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/order_type_grocery18"
                android:scaleType="centerInside"
                android:src="@drawable/groceries_avatar_18plus" />

            <ImageButton
                android:id="@+id/choose_pharmacy"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/order_type_pharmacy"
                android:scaleType="centerInside"
                android:src="@drawable/pharmacy_avatar" />
        </LinearLayout>

        <TextView
            android:id="@+id/selected_type_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@{chooseOrderTypeViewModel.response}"
            android:textColor="@color/secondaryTextColor" />

        <LinearLayout
            android:id="@+id/choose_order_type_linear_layout_texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginRight="10dp"
            android:gravity="fill">

            <Button
                android:id="@+id/choose_order_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FF8585"
                android:text="@string/choose_order_type_cancel" />

            <Button
                android:id="@+id/choose_order_button_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#58C031"
                android:text="@string/choose_order_type_accept" />
        </LinearLayout>
    </LinearLayout>

</layout>