<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryLightColor"
        android:orientation="vertical"
        android:padding="20dp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="38dp"
            android:text="@string/popup_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="30sp" />

        <ListView
            android:id="@+id/products_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Right Button" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="30dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Right Button" />

            <Button
                android:id="@+id/accept_button"
                android:layout_width="30dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/accept_order" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Right Button" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>