<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryLightColor"
        android:orientation="vertical"
        android:padding="20dp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/popup_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/address_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Address"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/address_text_view"
                android:layout_width="128dp"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_weight="0"
                android:text="ADDRESS"
                android:textColor="@color/secondaryTextColor"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ListView
            android:id="@+id/products_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:layout_width="50dp"
                android:layout_height="0dp"

                android:text="Right Button" />

            <Button
                android:id="@+id/Ok_button"
                android:layout_width="5dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/Ok"
                android:textSize="15sp" />

            <View
                android:layout_width="50dp"
                android:layout_height="0dp"

                android:text="Right Button" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>