<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="20dp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/address_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Address"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/address_text_view"
                android:layout_width="126dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_weight="0"
                android:text="ADDRESS"
                android:textColor="@color/secondaryTextColor"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Date"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="127dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_weight="0"
                android:text="DATE"
                android:textColor="@color/secondaryTextColor"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ListView
                    android:id="@+id/products_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="160dp" />

            </LinearLayout>
        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dismiss_button"
                android:layout_width="7dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#58C031"
                android:text="@string/Ok"
                android:textColor="#FFFCFC" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>