<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registerViewModel"
            type="com.maskjs.korona_zakupy.ui.register.part3.RegisterPart3ViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animationCache="false"
        android:background="@drawable/gradient"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/korona_zakupy_title2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/primaryTextColor"
            app:errorTextColor="#F44336"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:errorText="@{registerViewModel.firstNameInputLayoutModel.errorContent}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_hint_first_name"
                android:inputType="textPersonName"
                android:text="@={registerViewModel.firstNameInputLayoutModel.textContent}"
                android:textColor="@color/primaryTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/primaryTextColor"
            app:errorTextColor="#F44336"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:errorText="@{registerViewModel.lastNameInputLayoutModel.errorContent}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_hint_last_name"
                android:inputType="textPersonName"
                android:text="@={registerViewModel.lastNameInputLayoutModel.textContent}"
                android:textColor="@color/primaryTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/primaryTextColor"
            app:errorTextColor="#F44336"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:errorText="@{registerViewModel.addressInputTextLayoutModel.errorContent}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_hint_address"
                android:inputType="textPersonName"
                android:text="@={registerViewModel.addressInputTextLayoutModel.textContent}"
                android:textColor="@color/primaryTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear_layout_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="42dp"
                android:layout_marginBottom="42dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/text_view_ask_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/reg_text_view_ask_have_account"
                    android:textColor="@color/primaryTextColor" />

                <TextView
                    android:id="@+id/text_view_to_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:text="@string/reg_text_view_to_login"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/tick_white" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>